minor fixes: FAB, remove button hover effects on mobile.

--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ input[type="range"] {
   button.fab,
   button#copy_btn,
   button#dl {
-    position: absolute;
+    position: fixed;
     right: 2rem;
     height: 4rem;
     width: 4rem;
@@ -273,6 +273,15 @@ input[type="range"] {
         margin-top: 1rem;
         width: 16rem;
     }
+    button:hover,a:hover {
+        border-radius: 5rem;
+        background-color: rgb(255, 189, 66);
+    }
+    button:active,a:active {
+        transition: 100ms;
+        border-radius: 1.4rem;
+        background-color: rgb(250, 172, 26);
+    }
     button#dl {
         padding-inline: 1rem;
         width: 5.5rem;
@@ -311,7 +320,7 @@ input[type="range"] {
       }
       
       input[type="range"]:hover {
-        background: rgb(61, 56, 50);
+        background: #1f1f1f;
       }
       
       input[type="range"]::-webkit-slider-thumb {
